feat: Add MesloLGS Nerd Font to integrated terminal font family settings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "json.maxItemsComputed": 5000,
   "files.associations": {
     "package.json": "json"
-  }
+  },
+  "terminal.integrated.fontFamily": "MesloLGS Nerd Font"
 }
